# frankly_bootloader

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy-docs.yaml  main.yaml  test_build.yaml
docs/: README.md  _sidebar.md  architecture.md  development.md  index.html  integration.md
docs/protocol/: README.md  ResponseTypes.md  ResultTypes.md
docs/protocol/RequestTypes/: README.md  REQ_APP_INFO_CRC_CALC.md  REQ_APP_INFO_CRC_STRD.md  REQ_APP_INFO_PAGE_IDX.md  REQ_DEV_INFO_BOOTLOADER_CRC.md  REQ_DEV_INFO_BOOTLOADER_VERSION.md  REQ_DEV_INFO_PID.md  REQ_DEV_INFO_PRD.md  REQ_DEV_INFO_UID.md  REQ_DEV_INFO_VID.md  REQ_FLASH_INFO_NUM_PAGES.md  REQ_FLASH_INFO_PAGE_SIZE.md  REQ_FLASH_INFO_START_ADDR.md  REQ_PING.md  REQ_RESET_DEVICE.md  REQ_START_APP.md
include/francor/franklyboot/: franklyboot.h  handler.h  handler.tpp  hardware_interface.h  msg.h
src/francor/franklyboot/: msg.cpp
tests/: CMakeLists.txt
tests/frankly_test_utils/: CMakeLists.txt
tests/frankly_test_utils/include/francor/: frankly_test_utils.h
tests/frankly_test_utils/src/: frankly_test_utils.cpp
tests/include/francor/: frankly_test_utils.h
tests/src/: test_franklyboot.cpp  test_utils.cpp
tests/src/app_infos/: CMakeLists.txt  tests.cpp
tests/src/basic_tests/: CMakeLists.txt  tests.cpp
tests/src/device_infos/: CMakeLists.txt  tests.cpp
tests/src/flash_infos/: CMakeLists.txt  tests.cpp
tests/src/flash_read/: CMakeLists.txt  tests.cpp
tests/src/flash_write/: CMakeLists.txt  tests.cpp
tests/src/general_request_tests/: CMakeLists.txt  tests.cpp
tests/src/page_buffer/: CMakeLists.txt  tests.cpp
utils/device_sim_api/: CMakeLists.txt
utils/device_sim_api/include/francor/franklyboot/: device_sim_api.h  sim_device_defines.h
utils/device_sim_api/src/: device_sim_api.cpp
